<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gebruiker.myapplication.MainActivity">

    <ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/body"
    android:src="@drawable/body"
        />

    <ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/nose"
    android:src="@drawable/nose"
    />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/arms"
        android:src="@drawable/arms"
        />
    />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eyebrows"
        android:src="@drawable/eyebrows"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mouth"
        android:src="@drawable/mouth"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eyes"
        android:src="@drawable/eyes"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mustache"
        android:src="@drawable/mustache"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hat"
        android:src="@drawable/hat"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ears"
        android:src="@drawable/ears"
        />
    <ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/shoes"
    android:src="@drawable/shoes"
    />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/glasses"
        android:src="@drawable/glasses"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_eyes"
        android:id="@+id/check_eyes"
        android:checked="true"
        android:onClick="onCheckboxClicked"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="31dp"
        android:layout_marginEnd="31dp" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_hat"
        android:id="@+id/check_hat"
        android:checked="true"
        android:onClick="onCheckboxClicked"
        android:layout_above="@+id/check_ears"
        android:layout_alignLeft="@+id/check_ears"
        android:layout_alignStart="@+id/check_ears" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_arms"
        android:id="@+id/check_arms"
        android:checked="true"
        android:onClick="onCheckboxClicked"
        android:layout_above="@+id/check_nose"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_ears"
        android:id="@+id/check_ears"
        android:checked="true"
        android:onClick="onCheckboxClicked"
        android:layout_above="@+id/check_mustache"
        android:layout_alignLeft="@+id/check_mustache"
        android:layout_alignStart="@+id/check_mustache" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_eyebrows"
        android:id="@+id/check_eyebrows"
        android:checked="true"
        android:onClick="onCheckboxClicked"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_glasses"
        android:id="@+id/check_glasses"
        android:checked="true"
        android:onClick="onCheckboxClicked"
        android:layout_above="@+id/check_hat"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_mouth"
        android:id="@+id/check_mouth"
        android:checked="true"
        android:onClick="onCheckboxClicked"
        android:layout_above="@+id/check_shoes"
        android:layout_alignLeft="@+id/check_shoes"
        android:layout_alignStart="@+id/check_shoes" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_mustache"
        android:id="@+id/check_mustache"
        android:checked="true"
        android:onClick="onCheckboxClicked"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_nose"
        android:id="@+id/check_nose"
        android:checked="true"
        android:onClick="onCheckboxClicked"
        android:layout_below="@+id/check_hat"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_shoes"
        android:id="@+id/check_shoes"
        android:checked="true"
        android:onClick="onCheckboxClicked"
        android:layout_above="@+id/check_eyes"
        android:layout_alignLeft="@+id/check_eyes"
        android:layout_alignStart="@+id/check_eyes" />


</RelativeLayout>

